--- a/resident/resident-service/pom.xml
+++ b/resident/resident-service/pom.xml
@@ -14,7 +14,7 @@
 	<version>1.2.1-SNAPSHOT</version>
 	<properties>
 		<commons.packet.manager.version>1.2.0.1-SNAPSHOT</commons.packet.manager.version>
-		<kernel.core.version>1.2.0.1-SNAPSHOT</kernel.core.version>
+		<kernel.core.version>1.2.1-SNAPSHOT</kernel.core.version>
 		<id-repository-core.version>1.2.0.1-SNAPSHOT</id-repository-core.version>
 		<kernel-keymanager-service.version>1.2.0.1-SNAPSHOT</kernel-keymanager-service.version>
 		<kernel.authcodeflowproxy.api.version>1.2.1-SNAPSHOT</kernel.authcodeflowproxy.api.version>
@@ -248,6 +248,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+	   <dependency>
+	   	<groupId>io.mosip.kernel</groupId>
+	   	<artifactId>kernel-auth-adapter</artifactId>
+	   	<version>1.2.0</version>
+	   </dependency>
 	</dependencies>
 	<build>
 		<plugins>
